plugins {
    id 'io.micronaut.application' version '4.4.4'
}

version = '0.1'
group = 'com.barbu'

repositories {
    mavenCentral()
}

dependencies {
    annotationProcessor 'io.micronaut.data:micronaut-data-processor'
    annotationProcessor 'io.micronaut.openapi:micronaut-openapi'
    implementation 'io.swagger.core.v3:swagger-annotations:2.2.22'

    implementation project(':game-engine')
    implementation project(':bot')
    implementation 'io.micronaut:micronaut-http-server-netty'
    implementation 'io.micronaut:micronaut-websocket'
    implementation 'io.micronaut:micronaut-jackson-databind'
    implementation 'io.micronaut.data:micronaut-data-jdbc'
    implementation 'io.micronaut.sql:micronaut-jdbc-hikari'
    implementation 'io.micronaut.flyway:micronaut-flyway'
    implementation 'io.micronaut.security:micronaut-security-jwt'
    implementation 'at.favre.lib:bcrypt:0.10.2'

    runtimeOnly 'ch.qos.logback:logback-classic'
    runtimeOnly 'org.yaml:snakeyaml'
    runtimeOnly 'org.postgresql:postgresql'
    runtimeOnly 'org.flywaydb:flyway-database-postgresql'
    runtimeOnly 'com.h2database:h2'

    testImplementation 'io.micronaut:micronaut-http-client'
    testImplementation 'io.micronaut.test:micronaut-test-junit5'
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

application {
    mainClass = 'com.barbu.app.Application'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

micronaut {
    version '4.6.3'
    runtime 'netty'
    testRuntime 'junit5'
    processing {
        incremental true
        annotations 'com.barbu.*'
    }
}
